# hck2d2024

./: .gitignore  CMakeLists.txt  Misc.cpp  Render.cpp  main.cpp
include/: Color.h  Figure.h  Point.h  Rectangle.h  Render.h  Shape.h
